<resources>
    // BottomMenuItems
    <string name="bottom_menu_home_title">Главная</string>
    <string name="bottom_menu_test_solution_title">Решения тестов</string>
    <string name="bottom_menu_menu_title">Меню</string>

    // MainMenuItems
    <string name="main_menu_schedule">Расписания</string>
    <string name="main_menu_notes">Конспекты</string>
    <string name="main_menu_groups">Группы</string>
    <string name="main_menu_favorites_question">Избранные вопросы</string>
    <string name="main_menu_completed_tests">Завершённые тесты</string>
    <string name="main_menu_not_completed_tests">Незавёршенные тесты</string>
    <string name="main_menu_notification">Уведомления</string>

    //Аккаунт
    <string name="account_title">Аккаунт</string>

    <string name="app_name">Mega Academy</string>
    <string name="register_button">Register</string>
    <string name="register_text">Регистрация</string>
    <string name="email_text">E-mail</string>
    <string name="email_required_text">E-mail*</string>
    <string name="code">Код</string>
    <string name="phone_number">Номер телефона</string>
    <string name="code_plus_7">+7</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="phone_text">Phone</string>
    <string name="password_text">Password</string>
    <string name="password_required_text">Password*</string>
    <string name="patronymic_text">Patronymic</string>
    <string name="authorization_text">Авторизация</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="sign_in">Войти</string>
    <string name="phone_example">9123456789</string>
    <string name="register_success_message">Регистрация прошла успешно</string>
    <string name="password_wrong">Пароль должен содержать не менее 6 символов, включая минимум 1 цифру</string>
    <string name="email_wrong">Используйте корректный адрес электронной почты</string>
    <string name="phone_wrong">Введите номер телефона</string>
    <!--ru strings-->
    <string name="password_text_ru">Пароль</string>
    <string name="name_text_ru">Имя</string>
    <string name="surname_text_ru">Фамилия</string>
    <string name="phone_text_ru">Телефон</string>
    <string name="phone_required_text_ru">Телефон*</string>
    <string name="patronymic_text_ru">Отчество</string>
    <string name="register_button_ru">Регистрация</string>
    <string name="password_required_text_ru">Пароль*</string>
    <string name="open_telegram_title">Телеграм бот</string>
    <string name="checkbox_student_title">Зарегистрироваться как студент</string>

    <!--    errors-->
    <string name="unknown_error_message">Произошла неизвестная ошибка. Повторите попытку позже</string>
    <string name="unknown_host_error_message">Нет соединения</string>
    <string name="wrong_data_error_message">Ошибка! Проверьте введеные данные</string>
    <string name="server_error_message">Неизвестная ошибка на сервере. Повторите попытку позже</string>
    <string name="unathorized_error_message">Произошла ошибка авторизации</string>
    <string name="logout">Выйти</string>
    <string name="profile_person_info">Информация</string>
    <string name="profile_error_account">Ошибка загрузки данных</string>
    <string name="solution_image">solutionImage</string>
    <string name="answer_with_errors_helper_text">Введите правильный ответ</string>
    <string name="answer_verify_text">Проверить</string>
    <string name="answer_send_text">Отправить</string>
    <string name="video_action">Открыть видео</string>
    <string name="video_title">К вопросу прикреплено видео.</string>

    //Solution
    <string name="your_answer">Ваш ответ:</string>
    <string name="error_load_solution">Не удалось загрузить решение. Пожалуйста попробуйте позднее</string>
    <string name="correct_answer_without_errors">Правильный ответ (без ошибок) :</string>
    <string name="explanation_answer">Пояснения к ответу на вопрос:</string>
    <string name="incorrect_answer">Неправильный ответ</string>
    <string name="correct_answer">Правильный ответ:</string>
    <string name="correct_answers">Правильные ответы:</string>
    <string name="allmost_the_right_answer">Почти правильный ответ</string>
    <string name="estimate_text">Оценить</string>
    <string name="your_detailed_answer">Ваш развернутый ответ</string>
    <string name="detailed_answer_received">Получено:</string>
    <string name="detailed_answer_total">Всего:</string>
    <string name="question_has_been_rated">Установлена оценка для вопроса</string>
    <string name="answer_needs_to_be_checked">Ответ необходимо оценить</string>
    <string name="attention">Внимание</string>
    <string name="ok">ОК</string>
    <string name="accepted">Понятно</string>
    <string name="cancel">Отмена</string>
    <string name="open_youtube_message">Открыть youtube для просмотра видео?</string>
    <string name="open_telegram">Открыть Telegram?</string>
    <string name="go_to_test_solution">Перейти к решению теста</string>
    <string name="continue_to_test_solution">Продолжить решение теста</string>
    <string name="start_solution_test">Начать решение теста </string>
    <string name="subject">Предметы</string>
    <string name="solution">Решение</string>
    <string name="start">Начать</string>
    <string name="press_again">Нажмите ещё раз для выхода</string>
    <string name="confirm_logout">Подтвердите выход</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="warning_logout">Вы действительно хотите выйти?</string>
    <string name="complited_solution">Завершенные</string>
    <string name="not_complited_solution">Не завершенные</string>
    <string name="all">Все</string>
    <string name="go">Перейти</string>
    <string name="pie_chat_title_point">%1$s из %2$s</string>
    <string name="test_solved">Тест решён на %1$s.</string>
    <string name="of_issues_resolved">Решено %1$s вопросов</string>
    <string name="start_date">Дата начала: %1$s</string>
    <string name="end_date">Дата завершения: %1$s</string>
    <string name="finish_test">Завершить тест</string>
    <string name="points_question">Баллы: %1$s из %2$s.</string>
    <string name="points">Баллы</string>
    <string name="finish">Завершить</string>
    <string name="save_answers">Сохранить введенные ответы ?</string>
    <string name="save_answers_success">Ответы успешно сохранены</string>
    <string name="save">Сохранить</string>
    <string name="not_save">Не сохранять</string>
    <string name="your_not_answer">[Вы не указали ответ]</string>
    <string name="open_site">Перейти на сайт?</string>
    <string name="open_site_schedules">Открыть сайт и перейти в раздел расписания?</string>
    <string name="open_site_materials">Открыть сайт и перейти в раздел конспекты?</string>
    <string name="open_link">Перейти по ссылке?\n "%1$s"</string>
    <string name="site">Сайт</string>
    <string name="start_test_message">Началось решение теста</string>
    <string name="result">Результат решения</string>
    <string name="course_access_key">Введите ключ доступа к курсу</string>
    <string name="my_course">Мои курсы</string>
    <string name="choose_course">Подобрать курс</string>
    <string name="oops">Упс...</string>
    <string name="dont_havecourses">У вас сейчас нет курсов. Давайте подберём подходящий.</string>
    <string name="activate_key_message">Вы добавлены в группу "%1$s"</string>
    <string name="continue_action">Продолжить</string>
    <string name="question_count">Количество вопросов: "%1$s"</string>
    <string name="test_solutions">Решения теста</string>
    <string name="system_not_found">Системе не удалось найти указанный путь</string>
    <string name="photo_detailed">Полный размер</string>
    <string name="result_test_need_to_check_question">Его необходимо проверить самому или с помощью куратора.</string>
    <string name="result_test_need_to_check_questions">Их необходимо проверить самому или с помощью куратора.</string>

    <string name="history_empty">Тесты отсутствуют.</string>

    //SubjectWorkspace
    <string name="no_materials_in_this_section">В разделе нет элементов. Вернитесь позднее.</string>
    //HtmlPage
    <string name="no_info_in_this_section">В разделе нет информации. Вернитесь позднее.</string>
    //Test
    <string name="no_test_in_this_section">В разделе нет тестов. Вернитесь позднее.</string>
    //HtmlPage
    <string name="html_page_start_text">Начать тестирование</string>
    <string name="html_page_first_path">Только первая часть  "%1$s"</string>
    <string name="html_page_second_path">Только вторая часть  "%1$s"</string>
    <string name="html_page_full_text">Полный тест  "%1$s"</string>
    <string name="answer_solution_test_changed">Ответы "%1$s" из "%2$s"</string>
    <string name="question_number">Вопрос "%1$s"</string>
    <string name="question">Вопрос"</string>
    <string name="error_loading_common">Не удалось загрузить данные. Пожалуйста повторите попытку позже</string>

    // RestorePassword
    <string name="reset_password_title">Восстановление пароля</string>
    <string name="reset_password_description">Для восстановления пароля введите адрес электронной почты вашего аккаунта. На него будет отправлена ссылка для восстановлени.</string>
    <string name="reset_password_send_description">На почту "%1$s" отправлена ссылка для восстановлению пароля.</string>

    // School
    <string name="domain_change">Школа "%1$s" выбрана </string>
    <string name="domain_change_error">Не удалось сменить школу</string>
    <string name="domain_change_and_auth_error">Не удалось авторизоваться</string>

    // Authorization
    <string name="school_change_title">Школа: "%1$s"</string>

    //SchoolFragment
    <string name="chosen_school_title">Выбор школы</string>

    //CourseFragment
    <string name="course_title">Курсы</string>

    //Settings
    <string name="settings">Настройки</string>
    <string name="started_text">Загрузка...</string>

    //MainFragment
    <string name="main_to_web_screen_link_failed">Не удалось загрузить ссылку на курс.</string>
    <string name="main_key_input">Ввести ключ доступа к курсу</string>
    <string name="main_tuck_up_course">Подобрать курс</string>
    <string name="main_telegram_bind">Привяжите вашу учетную запись к Telegram</string>
    <string name="main_telegram_link">Ссылка скопирована в буфер обмена</string>
    <string name="main_telegram_copy_description">Вставьте её в Telegram бот.</string>
    <string name="main_telegram_open">Открыть %1$s.</string>

    //ActivateKeyDialog
    <string name="activate_key">Активация курса</string>
    <string name="activate_key_input">Введите ключ доступа к курсу</string>
    <string name="activate">Активировать</string>


    //Favorites
    <string name="favorites_title">Избранные вопросы</string>
    <string name="favorites_empty">Нет избранных вопросов.</string>


</resources>