<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/space_16">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/size_30"
        android:layout_height="@dimen/size_3"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/separator_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTestTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/reset_password_title"
        android:textColor="?attr/secondary"
        android:textSize="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/reset_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_12"
        android:gravity="left"
        android:paddingHorizontal="@dimen/space_12"
        android:text="@string/reset_password_description"
        android:textColor="?attr/textPrimary"
        android:textSize="@dimen/text_18"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTestTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_text"
        android:paddingHorizontal="@dimen/space_12"
        android:paddingVertical="@dimen/space_12"
        android:textColorHint="?attr/secondary"
        android:textSize="@dimen/text_12"
        app:hintTextAppearance="@style/EditTextHintTextAppearance"
        app:hintTextColor="?attr/primary"
        app:layout_constraintBottom_toTopOf="@+id/sendEmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="?attr/textPrimary"
            android:theme="@style/EditTextCursorColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendEmailButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12"
        android:layout_marginTop="@dimen/space_12"
        android:backgroundTint="?attr/primary"
        android:fontFamily="@font/roboto_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/answer_send_text"
        android:textAllCaps="true"
        android:textSize="@dimen/text_14"
        app:cornerRadius="@dimen/radius_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
